Fix scrolling layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -87,7 +87,7 @@ h1, h2, h3, h4, h5, h6, figure {
 #fh5co-container {
   width: 100%;
   float: left;
-  height: 900px;
+  height: 100%;
   flex-wrap: wrap;
   -webkit-flex-wrap: wrap;
   -moz-flex-wrap: wrap;
@@ -129,7 +129,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 
 .fh5co-nav {
-  margin-bottom: 3em;
+  /* margin-bottom: 0.1em; */
 }
 @media screen and (max-width: 768px) {
   .fh5co-nav {
@@ -185,7 +185,7 @@ form label {
 
 .display-t {
   display: table;
-  min-height: 700px;
+  /* min-height: 700px; */
   margin: 0 auto;
 }
 .display-t .display-tc {
@@ -223,7 +223,7 @@ form label {
 .display-t .display-tc h2 {
   font-size: 16px;
   line-height: 1.5;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
 }
 @media screen and (max-width: 480px) {
   .display-t .display-tc h2 {
